fix: consider http code 429 as indicating success
Hitting "too many requests" might happen if the workflow runs several
times in a row. It's probably reasonable to consider 429 as being a
sign that the requested URL does exist.

--- a/action.yml
+++ b/action.yml
@@ -188,15 +188,17 @@ runs:
         lychee_config=.git/lychee.toml
         cat <<EOF > $lychee_config
         scheme = ["https", "http"]
-        cache = false
-        no_progress = true
+        accept = ["200..=204", "429"]
         timeout = $timeout
         retry_wait_time = $retry_wait_time
         max_retries = 2
+        insecure = true
+        skip_missing = true
         include_mail = false
         include_verbatim = true
         exclude_all_private = true
-        insecure = true
+        no_progress = true
+        cache = false
         EOF
         # Set variables used in later steps.
         echo "lychee_config=$lychee_config" >> $GITHUB_ENV
