--- a/.gitattributes
+++ b/.gitattributes
@@ -1,36 +1,71 @@
-# -*- mode: sh; -*-
+# Summary: repository-specific file attributes assignments for git.
+#
+# Copyright 2024 California Institute of Technology.
+# License: Modified BSD 3-clause – see file "LICENSE" in the project website.
+# Website: https://github.com/caltechlibrary/template
 
-# Set the default behavior, in case people don't have core.autocrlf set.
-# .............................................................................
+# Set default interpretation of line endings ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 * text=auto
 
-# Specify what's text and should be normalized.
-# .............................................................................
+# Interpretation of common text files ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-*.py text
-*.in text
-*.rst text
-*.cfg text
-*.ini text
-*.yml text
-*.json text
-*.bat text
-*.sh text
-LICENSE text
-CONTRIBUTING text
+*.bat	text eol=crlf
+*.cff	text
+*.cfg	text
+*.css	text diff=css
+*.env	text
+*.html	text diff=html
+*.ini	text
+*.ipynb	text eol=lf
+*.js	text
+*.json	text
+*.md	text diff=markdown
+*.py	text diff=python
+*.rst	text
+*.sh	text
+*.sql	text
+*.svg	text
+*.toml	text
+*.tex	text diff=tex
+*.txt	text
+*.yaml	text merge=yaml
+*.yml	text merge=yaml
 
-# Denote all files that are truly binary and should not be modified.
-# .............................................................................
+# RC files like .babelrc, .eslintrc, etc.
+*.*rc	text
 
-*.png binary
-*.jpg binary
-*.xls binary
-*.doc binary
+LICENSE		text
+Makefile	text
 
-# This next one is because in other projects, we've had problems with git
-# getting confused about line endings when people using Windows and Mac edit
-# the same files.
-# .............................................................................
+*.gitattributes	text
+*.*ignore	text
+.gitconfig	text
 
-*.csv binary diff=csv
+# Interpretation of common binary files ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+*.bz	binary
+*.DOC	binary
+*.doc	binary
+*.DOCX	binary
+*.docx	binary
+*.DOT	binary
+*.dot	binary
+*.gz	binary
+*.jpeg	binary
+*.jpg	binary
+*.PDF	binary
+*.pdf	binary
+*.RTF	binary
+*.rtf	binary
+*.tar	binary
+*.tgz	binary
+*.tif	binary
+*.tiff	binary
+*.xls	binary
+*.zip	binary
+
+# Special case for CSV files ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# This avoids compatibility issues between Windows and Mac.
+
+*.csv	text eol=crlf
