feat: add new parameters, remove push action

--- a/sample-workflow.yml
+++ b/sample-workflow.yml
@@ -1,6 +1,6 @@
 # GitHub Actions workflow for Baler (BAd Link reportER) version 0.0.2.
 # This is available as the file "sample-workflow.yml" from the source
-# code repository for Baler: https://github.com/caltechlibrary/baler/
+# code repository for Baler: https://github.com/caltechlibrary/baler
 
 name: "Bad Link Reporter"
 
@@ -13,6 +13,12 @@ env:
   # Label assigned to issues created by this workflow:
   labels: 'bug'
 
+  # Number of previous issues to check for duplicate reports.
+  lookback: 10
+
+  # Time (sec) to wait on an unresponsive URL before trying once more.
+  timeout: 15
+
   # Optional file containing a list of URLs to ignore, one per line:
   ignore: '.github/workflows/ignored-urls.txt'
 
@@ -22,10 +28,6 @@ on:
     - cron: "00 04 * * *"
   pull_request:
     paths: ['**.md']
-  push:
-    paths:
-      - .github/workflows/bad-link-reporter.yml
-      - .github/workflows/ignored-urls.txt
   workflow_dispatch:
 
 # The rest of this file should be left as-is ─────────────────────────
@@ -40,6 +42,8 @@ jobs:
     steps:
       - uses: caltechlibrary/baler@main
         with:
-          files:  ${{github.event.inputs.files  || env.files}}
-          labels: ${{github.event.inputs.labels || env.labels}}
-          ignore: ${{github.event.inputs.ignore || env.ignore}}
+          files:    ${{github.event.inputs.files    || env.files}}
+          labels:   ${{github.event.inputs.labels   || env.labels}}
+          ignore:   ${{github.event.inputs.ignore   || env.ignore}}
+          timeout:  ${{github.event.inputs.timeout  || env.timeout}}
+          lookback: ${{github.event.inputs.lookback || env.lookback}}
