fix: revise push vspull, also cron, also job name
After using this for a repository, I think I'm wrong about not testing
on pushes and testing on PRs. You run into a problem with editing and
doing PRs on GitHub: you want the test to be upon saving the file,
which is a push, not a PR. And having both push and pull_request means
that the checks are run twice when someone opens a PR.

If this gets run on pushes, then it doesn't make sense to run it with
cron on a daily basis. I changed that to a once-a-week schedule.

--- a/sample-workflow.yml
+++ b/sample-workflow.yml
@@ -23,19 +23,18 @@ env:
   ignore: '.github/workflows/ignored-urls.txt'
 
 on:
-  schedule:
-    # Syntax is: "minute  hour  day-of-month  month  day-of-week"
-    - cron: "00 04 * * *"
-  pull_request:
+  schedule:  # Cron syntax is: "min hr day-of-month month day-of-week"
+    - cron: "00 04 * * 1"
+  push:
     paths: ['**.md']
   workflow_dispatch:
 
 # The rest of this file should be left as-is ─────────────────────────
 
-run-name: Test links in files
+run-name: Test links in Markdown files
 jobs:
-  run-baler:
-    name: Run Bad Link Reporter
+  Baler:
+    name: Link checker and reporter
     runs-on: ubuntu-latest
     permissions:
       issues: write
