fix: update to latest version

--- a/.github/workflows/bad-link-reporter.yml
+++ b/.github/workflows/bad-link-reporter.yml
@@ -17,15 +17,18 @@ env:
   # Label assigned to issues created by this workflow:
   labels: 'bug'
 
+  # Number of previous issues to check for duplicate reports.
+  lookback: 10
+
+  # Time (sec) to wait on an unresponsive URL before trying once more.
+  timeout: 15
+
   # Optional file containing a list of URLs to ignore, one per line:
   ignore: '.github/workflows/ignored-urls.txt'
 
 on:
-  schedule:
-    # Syntax is: "minute  hour  day-of-month  month  day-of-week"
-    - cron: "00 04 * * *"
-  pull_request:
-    paths: ['**.md']
+  schedule:  # Cron syntax is: "min hr day-of-month month day-of-week"
+    - cron: "00 04 * * 1"
   push:
     paths:
       - .github/workflows/bad-link-reporter.yml
@@ -41,19 +44,27 @@ on:
       ignore:
         description: "File containing URLs to ignore"
         default: '.github/workflows/ignored-urls.txt'
+      lookback:
+        description: "No. of previous issues to check"
+        default: 10
+      debug:
+        description: "Run in debug mode"
+        type: boolean
 
 # The rest of this file should be left as-is ─────────────────────────
 
-run-name: Test links in files
+run-name: Test links in Markdown files
 jobs:
-  run-baler:
-    name: Run Bad Link Reporter
+  Baler:
+    name: Link checker and reporter
     runs-on: ubuntu-latest
     permissions:
       issues: write
     steps:
       - uses: caltechlibrary/baler@main
         with:
-          files:  ${{github.event.inputs.files  || env.files}}
-          labels: ${{github.event.inputs.labels || env.labels}}
-          ignore: ${{github.event.inputs.ignore || env.ignore}}
+          files:    ${{github.event.inputs.files    || env.files}}
+          labels:   ${{github.event.inputs.labels   || env.labels}}
+          ignore:   ${{github.event.inputs.ignore   || env.ignore}}
+          timeout:  ${{github.event.inputs.timeout  || env.timeout}}
+          lookback: ${{github.event.inputs.lookback || env.lookback}}
