--- a/.github/workflows/bad-link-reporter.yml
+++ b/.github/workflows/bad-link-reporter.yml
@@ -6,7 +6,7 @@
 # │ source repository at https://github.com/caltechlibrary/baler/.   │
 # ╰─────────────────── Notice ── Notice ── Notice ───────────────────╯
 
-name: "Bad Link Reporter"
+name: Bad Link Reporter
 
 # Configure this section ─────────────────────────────────────────────
 
@@ -15,7 +15,7 @@ env:
   files: '*.md'
 
   # Label assigned to issues created by this workflow:
-  labels: 'bug'
+  labels: bug
 
   # Number of previous issues to check for duplicate reports.
   lookback: 10
@@ -24,11 +24,11 @@ env:
   timeout: 15
 
   # Optional file containing a list of URLs to ignore, one per line:
-  ignore: '.github/workflows/ignored-urls.txt'
+  ignore: .github/workflows/ignored-urls.txt
 
 on:
   schedule:  # Cron syntax is: "min hr day-of-month month day-of-week"
-    - cron: "00 04 * * 1"
+    - cron: 00 04 * * 1
   push:
     paths:
       - .github/workflows/bad-link-reporter.yml
@@ -36,19 +36,19 @@ on:
   workflow_dispatch:
     inputs:
       files:
-        description: "Comma-separated paths or regexp's"
+        description: Comma-separated paths or regexp's
         default: '*.md'
       labels:
-        description: "Comma-separated issue labels"
-        default: 'bug'
+        description: Comma-separated issue labels
+        default: bug
       ignore:
-        description: "File containing URLs to ignore"
-        default: '.github/workflows/ignored-urls.txt'
+        description: File containing URLs to ignore
+        default: .github/workflows/ignored-urls.txt
       lookback:
-        description: "No. of previous issues to check"
+        description: No. of previous issues to check
         default: 10
       debug:
-        description: "Run in debug mode"
+        description: Run in debug mode
         type: boolean
 
 # The rest of this file should be left as-is ─────────────────────────
