--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,6 +1,8 @@
 rules:
   colons:
     max-spaces-after: -1
+  quoted-strings:
+    required: only-when-needed
   document-start:
       present: false
   document-end:
