--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,3 +1,9 @@
+# Summary: configuration file for .github/workflows/yaml-linter.yml.
+#
+# Copyright 2024 California Institute of Technology.
+# License: Modified BSD 3-clause – see file "LICENSE" in the project website.
+# Website: https://github.com/caltechlibrary/baler
+
 rules:
   colons:
     max-spaces-after: -1
