fix: recommend referring to @v1 of the action instead of @main

--- a/sample-workflow.yml
+++ b/sample-workflow.yml
@@ -39,7 +39,7 @@ jobs:
     permissions:
       issues: write
     steps:
-      - uses: caltechlibrary/baler@main
+      - uses: caltechlibrary/baler@v1
         with:
           files:    ${{github.event.inputs.files    || env.files}}
           labels:   ${{github.event.inputs.labels   || env.labels}}
