chore: update linter GHA workflows to latest versions

--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -1,10 +1,10 @@
-# GitHub Actions workflow to run a Markdown linter on .md files.
+# Summary: GitHub Actions workflow to run a Markdown linter on .md files.
 #
 # Copyright 2024 California Institute of Technology.
 # License: Modified BSD 3-clause – see file "LICENSE" in the project website.
 # Website: https://github.com/caltechlibrary/baler
 
-name: Lint Markdown files
+name: Markdown file linter
 run-name: Lint Markdown files after ${{github.event_name}} by ${{github.actor}}
 
 on:
@@ -27,9 +27,12 @@ jobs:
     name: Run Markdown linter
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: DavidAnson/markdownlint-cli2-action@v13
-      with:
-        config: .markdownlint.json
-        globs: |
-          *.md
+      - name: Check out copy of git repository.
+        uses: actions/checkout@v4
+
+      - name: Run Markdownlint on .md files.
+        uses: DavidAnson/markdownlint-cli2-action@v15
+        with:
+          config: .markdownlint.json
+          globs: |
+            *.md
